Fix bad alignment of headers on mobile app

--- a/src/layout/page.scss
+++ b/src/layout/page.scss
@@ -158,6 +158,10 @@
 
   }
 
+  h1, h2, h3, h4, h5, h6 {
+    text-align: start;
+  }
+
   h1 {
     font-size: 2.4em;
     font-weight: 400;
